# CastIt

./: Cargo.toml  INIT.md  LICENSE  README.md
src/: app.rs  config.rs  main.rs
src/app/: message.rs  mod.rs  preview.rs  state.rs  subscription.rs  update.rs  view.rs
src/app/views/: calculator.rs  command_runner.rs  file_browser.rs  help.rs  launcher.rs  mod.rs  settings.rs  web_search.rs
src/domain/: models.rs
src/infra/: desktop.rs  mod.rs  runner.rs
